--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
- th, td {
-    border:1px solid black;
-  }
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+table,td,th, tr{
+    border: solid 1px rgb(95, 120, 233);
+}
